Removed Java 21 features